<resources>
    <string name="app_name">Notification</string>
    <string name="button_signUp">SIGN UP</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone">Telephone</string>
    <string name="enter_password">Password</string>
    <string name="enter_rePassword">Re-type Password</string>
    <string name="button_register">REGISTER</string>
    <string name="button_cancel">CANCEL</string>
    <string name="channel_description" />
    <string name="edit_name">Name</string>
    <string name="enter_name">Name</string>
    <string name="channel_name" />
</resources>
